[tool.poetry]
name = 'faucet-rgb'
version = '0.1.0'
description = 'RGB faucet'
authors = ['Zoe Faltibà <zoefaltiba@gmail.com>', 'Nicola Busanello <nicola.busanello@gmail.com>']
license = 'MIT'

[tool.poetry.dependencies]
Flask = '^3.0.2'
Flask-APScheduler = "^1.13.1"
flask-migrate = "^4.0.5"
flask-sqlalchemy = "^3.1.1"
python = '^3.9'
rgb-lib = '0.2.0'

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
toml = "^0.10.2"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
setuptools = "69.1.0"
flake8 = "^7.0.0"
vulture = "^2.11"
black = "^24.2.0"

[tool.poetry.group.production.dependencies]
waitress = "^3.0.0"

[tool.poetry.group.scripts.dependencies]
rich = "^13.7.0"

[tool.black]
line_length = 100
target_version = ["py39", "py310", "py311", "py312"]

[tool.vulture]
min_confidence = 100

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry.scripts]
issue-asset = 'issue_asset:entrypoint'
wallet-helper = 'wallet_helper:entrypoint'
