[project]
name = "faucet-rgb"
version = "0.1.0"
description = "RGB faucet"
authors = [
  { name = "Zoe Faltibà", email = "zoefaltiba@gmail.com" },
  { name = "Nicola Busanello", email = "nicola.busanello@gmail.com" },
]
keywords = ["rgb", "bitcoin"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Other/Nonlisted Topic",
]
requires-python = ">=3.9.0"
dependencies = [
    "Flask~=3.0.2",
    "Flask-APScheduler~=1.13.1",
    "flask-migrate~=4.0.5",
    "flask-sqlalchemy~=3.1.1",
    "rgb-lib=0.3.0a11",
]

[build-system]
requires = ["poetry-core~=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
toml = "^0.10.2"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
setuptools = "70.3.0"
flake8 = "^7.0.0"
vulture = "^2.11"
black = "^24.2.0"

[tool.poetry.group.production.dependencies]
waitress = "^3.0.0"

[tool.poetry.group.scripts.dependencies]
rich = "^13.7.0"

[tool.poetry.scripts]
issue-asset = "issue_asset:entrypoint"
wallet-helper = "wallet_helper:entrypoint"

[tool.black]
line_length = 100
target_version = ["py39", "py310", "py311", "py312", "py313"]

[tool.vulture]
min_confidence = 100
